--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 a{
     text-decoration: none;
     color: inherit;
 }
-ul, ol, li{
+ul, ol, li, menu{
     list-style: none;
 }
+
 h1{
     text-align: center;
+    padding-block: 20px;
+    font-size: 48px;
 }
-
 main{
     display: flex;
     justify-content: center;
@@ -21,21 +23,24 @@ main{
 }
 
 .galeria {
+    height: 80vh;
     width: 80vw;
-    height: 100vh;
-    display: flex;
+    display:flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 16px;
-    flex-wrap: wrap;
+    gap: 24px;
 }
 .foto{
+    height: 30%;
     width: 30%;
-    height: 250px;
-    background-color: yellow;
+    background-color: tomato;
+    box-shadow: 8px 8px 20px #000;
 }
+
 .foto img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center top;
 }
